setting up with databinding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,3 @@
 <resources>
-    <string name="app_name">Samsung Calculator</string>
-    <string name="welcome">Welcome</string>
-    <string name="_0">0</string>
-    <string name="_3">3</string>
-    <string name="_1">1</string>
-    <string name="_6">6</string>
-    <string name="_5">5</string>
-    <string name="_4">4</string>
-    <string name="_8">8</string>
-    <string name="_7">7</string>
+    <string name="app_name">OneUI Calculator</string>
 </resources>
